[package]
name = "signalwire"
version = "0.1.0"
edition = "2021"
authors = ["Zmole Cristian <chiarel@tragdate.ninja>"]
description = "The unofficial SignalWire SDK for Rust."
license = "BSD-3-Clause"
documentation = "https://docs.rs/signalwire"
repository = "https://github.com/ZmoleCristian/signalwire"
homepage = "https://tragdate.ninja"
keywords = ["voip", "signalwire", "communication", "telephony", "sdk"]
categories = ["network-programming", "asynchronous", "api-bindings"]
readme = "README.md"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_derive = "1.0.216"
serde_json = "1.0.133"
thiserror = "2.0.8"
tokio = { version = "1.42.0", features = ["full"] }
